# NobleCause.ai

./: .gitignore  AGENT_COORDINATION.md  AGENT_TASK.md  BACKEND_COMMIT_TASK.md  DELEGATION_SUMMARY.md  DOCKER_README.md  FRONTEND_AGENT_TASK.md  GOVERNANCE.md  LICENSE  LICENSE-CONTENT.md  README.md  conftest.py  docker-compose.yml  manifest.md  organizations.json  schedule.json
audit/: data-contract.md  findings.md  inventory.md  recommendation.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  pytest.ini
backend/src/noble_cause_steward/: main.py
backend/src/noble_cause_steward/api/: models.py
backend/src/noble_cause_steward/database/: __init__.py  sql_models.py  sql_provider.py
backend/src/noble_cause_steward/deliberation/: __init__.py  deliberation_service.py  langgraph_deliberation.py  repository.py  state.py
backend/src/noble_cause_steward/llm/: __init__.py  async_open_router_adapter.py  model_selector.py  open_router_adapter.py
backend/src/noble_cause_steward/memory/: __init__.py  chroma_provider.py
backend/src/noble_cause_steward/research/: __init__.py  constants.py  research_manager.py  web_adapter.py
backend/tests/: conftest.py  test_main.py  test_websocket.py
backend/tests/database/: test_sql_provider.py
backend/tests/deliberation/: __init__.py  test_deliberation_service.py  test_langgraph_deliberation.py  test_live_deliberation.py
backend/tests/llm/: __init__.py  test_model_selector.py  test_open_router_adapter.py  tmp.txt
backend/tests/memory/: test_chroma_provider.py
backend/tests/research/: __init__.py  test_research_manager.py  test_web_adapter.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
gremium/: .env.example  Makefile  README.md  config.json  donation_canary.py  envtools.py  organizations.py  preflight.py  prompts.py  reaggregate.py  requirements.txt  run_session.py  run_wart.py  sources.md
journal/: README.md
prompts/: gremium_prompt.md  steward_inaugural_prompt.md
schema/: kosten.schema.json  organizations.schema.json  schedule.schema.json  session.schema.json
scripts/: README.md  inaugural_run.py
(+115 files in other folders)
