[tool.poetry]
name = "noble-cause-steward"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "noble_cause_steward", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pytest = "^7.1.2"
httpx = "^0.27.0"
anyio = "^3.7.1"
chromadb = "^0.5.0"
psycopg2-binary = "^2.9.3"
sqlalchemy = "^1.4.36"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"