[tool.poetry]
name = "noble-cause-steward"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "noble_cause_steward", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
anyio = "^3.7.1"
chromadb = "^0.5.0"
psycopg2-binary = "^2.9.3"
sqlalchemy = "^1.4.36"
python-dotenv = "^1.0.0"
langgraph = "^0.0.40"
langchain-core = "^0.1.0"

[tool.poetry.group.dev.dependencies]

[tool.pytest.ini_options]
markers = [
    "live: marks tests as live integration tests (requires real API calls)",
    "asyncio: marks tests as async",
]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"